Add font awesome and footer link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,6 @@ h1 {
 }
 
 /* Navbar styles with dropdown toggle */
-
 nav { 
     position: absolute;
     background-color: #ffffff;
@@ -71,7 +70,6 @@ nav {
 }
 
 /* Nav toggle */
-
 #nav-toggle:checked~nav { 
     display: block;
 }
@@ -98,7 +96,6 @@ footer {
 }
 
 /* Media query: tablets and larger (768px and up) */
-
 @media screen and (min-width: 768px) {
     /* Header */
     nav { 
@@ -128,9 +125,15 @@ footer {
     }
 
     /* Main content */
-
     main { 
         /* Push main content down to accomodate larger header */
         margin-top: 79px;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
     }
 }
